# pymojang

./: .auto-changelog  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  Pipfile  README.md  devbox.json  mkdocs.yml  mypy.ini  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  towncrier.toml  versioneer.py
.github/: pull_request_template.md  release.yml
.github/workflows/: ci.yml  deploy-docs.yml  pre-commit.yml  python-publish-prod.yml  python-publish-test.yml  python-test-package.yml  release.yml
changes/: 03f6ae9.bugfix  04024b0.feature  0d7548f.misc  10.misc  11.misc  12.misc  13.doc  14.feature  1419595.doc  15.misc  17f7634.misc  18.bugfix  1a6da4e.misc  1cf7b7f.misc  1e6020f.doc  1ea73f6.feature  20.misc  209.misc  21.misc  210.misc  211.bugfix  212.misc  22.misc  22c7de4.doc  23.misc  23aa9f3.misc  24.misc  26.feature  26a39bd.doc  27.feature  28.misc  29.feature  2c0a31c.doc  30.feature  32.feature  32043a1.feature  326f486.misc  33.misc  34.misc  35.misc  (+95 more)
docs/: advanced.md  auth.rst  basic.md  basic.rst  changelog.rst  check_status.md  conf.py  index.md  index.rst  minecraft.rst  requirements.txt
docs/PyMojang/: UserProfile.md  UserSession.md  base.md  exceptions.md  main.md  security.md  session.md  yggdrasil.md
docs/account/: auth_api.md  auth_connect.md  auth_security.md  auth_session.md  retrieve_user_info.md
docs/account/microsoft/: auth_api.md  connect.md
docs/css/: extra.css
docs/minecraft/: query.md  rcon.md  slp.md
docs/references/: base.rst  index.rst  session.rst  utils.rst
docs/references/auth/: index.rst  microsoft.rst  models.rst  mojang.rst  profile.rst
docs/references/minecraft/: index.rst
docs/references/mojang/api/: base.rst  helpers.rst  models.rst  session.rst  structures.rst  urls.rst
docs/references/mojang/api/auth/: microsoft.rst  models.rst  security.rst  yggdrasil.rst
docs/references/mojang/minecraft/: launchermeta.rst  query.rst  rcon.rst  slp.rst
examples/microsoft_flask/: app.py  requirements.txt
mojang/: __init__.py  _version.py  context.py  exceptions.py  globals.py  main.py  profile.py  session.py
mojang/account/: __init__.py  _auth.py  _session.py  _structures.py  _urls.py  base.py  session.py
mojang/account/auth/: _urls.py  microsoft.py  security.py  yggdrasil.py
mojang/account/ext/: _profile.py  microsoft.py  session.py
mojang/account/structures/: auth.py  base.py  profile.py  session.py
mojang/account/utils/: auth.py  helpers.py  urls.py
mojang/api/: __init__.py  base.py  models.py  security.py  session.py  structures.py  urls.py  user.py  validator.py
mojang/api/auth/: microsoft.py  models.py  security.py  yggdrasil.py
mojang/api/ext/: _profile.py  microsoft.py
mojang/api/files/: arguments.py  assets.py  libraries.py  versions.py
mojang/api/net/: query.py  rcon.py
mojang/api/net/common/: packet.py  types.py
mojang/api/net/query/: __init__.py  client.py  utils.py
mojang/api/net/query/packets/: base.py  handshake.py  stats.py  types.py
mojang/api/net/rcon/: __init__.py  client.py
mojang/api/net/rcon/packets/: command.py  login.py
mojang/api/net/slp/: __init__.py  slp.py  utils.py
mojang/api/net/slp/packets/: current.py  ping.py  types.py
mojang/api/structures/: auth.py  base.py  profile.py  session.py
mojang/api/utils/: helpers.py  urls.py
mojang/auth/: security.py  session.py  yggdrasil.py
mojang/classes/: __init__.py  profile.py  session.py
mojang/error/: errors.py  exceptions.py  handler.py
mojang/minecraft/: __init__.py  launchermeta.py
mojang/minecraft/net/: packet.py  protocol.py  types.py
mojang/minecraft/net/datatypes/: __init__.py  _protocols.py  array.py  basic.py  bytearray.py  common.py  functions.py  nbt.py  position.py  text.py  utils.py  varnum.py
mojang/minecraft/net/packets/: __init__.py  types.py
mojang/minecraft/proto/query/: __init__.py  _structures.py  packets.py
mojang/minecraft/proto/rcon/: __init__.py  packets.py
mojang/minecraft/proto/slp/: __init__.py  _structures.py  current.py  old.py
mojang/minecraft/slp/: __init__.py  _structures.py
mojang/minecraft/slp/pre_netty/: __init__.py
mojang/user/: api.py  cape.py  profile.py  skin.py
mojang/utils/: __init__.py  cape.py  server.py  skin.py  url.py  web.py
pymojang/: urls.py
pymojang/auth/: __init__.py  security_check.py  yggdrasil.py
pymojang/user/: __init__.py  api.py  cape.py  profile.py  session.py
pymojang/utils/: __init__.py  token.py
requirements/: requirements-dev.txt  requirements-docs.txt  requirements-hatch-static-analysis.txt  requirements-test.py3.10.txt  requirements-test.py3.11.txt  requirements-test.py3.8.txt  requirements-test.py3.9.txt  requirements-tests.txt  requirements.txt
src/mojang/: __init__.py  exceptions.py
src/mojang/api/: __init__.py  base.py  helpers.py  models.py  session.py  structures.py  urls.py
src/mojang/api/auth/: __init__.py  microsoft.py  models.py
src/mojang/minecraft/: __init__.py  launchermeta.py
src/mojang/minecraft/query/: __init__.py  _structures.py  packets.py
src/mojang/minecraft/rcon/: __init__.py  packets.py
src/mojang/minecraft/slp/: __init__.py  _structures.py
tests/: test_mojang.py  test_mojang_api_models.py  test_mojang_blocked_servers.py  test_mojang_names.py  test_mojang_sales.py  test_mojang_status.py  test_mojang_user.py  test_mojang_username.py  test_mojang_uuid.py  test_mojang_uuids.py  test_user.py  test_utils_helpers.py
tests/auth/: test_auth_app.py  test_auth_user.py  test_microsoft.py
tests/minecraft/: test_launchermeta.py  test_proto_query.py  test_proto_rcon.py  test_proto_slp.py
tests/minecraft/net/: test_net_types.py
tests/session/: mock_server.py  test_mojang_change_name.py  test_mojang_change_skin.py  test_mojang_check_username.py  test_mojang_get_profile.py  test_mojang_hide_cape.py  test_mojang_name_change.py  test_mojang_owns_mc.py  test_mojang_product_voucher.py  test_mojang_reset_skin.py  test_mojang_show_cape.py
(+23 files in other folders)
