[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pymojang"
dynamic = ["version"]
description = "It's a full wrapper arround the Mojang API and Mojang Authentication API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["minecraft", "mojang", "python3"]
authors = [
    {name = "Lucino772", email = "lucapalmi772@gmail.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
  "requests>=2.31,<2.33",
  "validators>=0.31.0,<0.35.0",
  "pyjwt[crypto]>=2.8,<2.11",
  "msal>=1.28,<1.32",
]

[project.urls]
Homepage = "https://github.com/Lucino772/pymojang"
Documentation = "https://lucino772.github.io/pymojang/"

[dependency-groups]
dev = [
  "furo==2024.5.6",
  "importlib-metadata==7.1.0",
  "pytest>=8.3.4",
  "pytest-cov>=5.0.0",
  "responses>=0.25.3",
  "ruff>=0.8.6",
  "sphinx==7.1.2",
  "sphinx-autobuild==2021.3.14",
  "sphinx-copybutton==0.5.2",
  "sphinx-issues==4.1.0",
  "sphinxext-opengraph==0.9.1",
  "towncrier==23.11.0",
]

[tool.towncrier]
name = "PyMojang"
directory = "changes"
package = "mojang"
filename = "CHANGELOG.rst"
title_format = "{name} v{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/Lucino772/pymojang/issues/{issue}>`_"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=./ --cov-report=xml ./tests"

[tool.coverage.run]
source_pkgs = ["mojang"]
branch = true
parallel = true

[tool.coverage.paths]
mojang = ["src/mojang", "*/pymojang/src/mojang"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@(abc\\.)?abstractmethod",
]
omit = ["tests/*"]

[tool.ruff]
line-length = 88
indent-width = 4
extend-exclude = [ "docs/**.py" ]

[tool.ruff.lint.isort]
known-first-party = ["mojang"]

[tool.hatch]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mojang/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mojang"]
