[metadata]
name = pymojang
author = Lucino772
author_email = lucapalmi772@gmail.com
url = https://github.com/Lucino772/pymojang
description = "It's a full wrapper arround the Mojang API and Mojang Authentication API"
long_description = file: README.md
long_description_content_type = text/markdown
licence = MIT
keywords = minecraft mojang python3
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Documentation = https://pymojang.readthedocs.io/en/latest/

[options]
packages = find:
install_requires =
    requests
    validators
    pyjwt[crypto]
    msal

[versioneer]
VCS = git
style = pep440
versionfile_source = mojang/_version.py
versionfile_build = mojang/_version.py
tag_prefix = v

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 79
select = B,C,E,F,W,T4,B9
exclude = docs,versioneer.py,_version.py
